feat: dynamic sidebar

--- a/docs/getting-started/01.getting-an-access-token.md
+++ b/docs/getting-started/01.getting-an-access-token.md
@@ -1,6 +1,4 @@
----
-pageClass: doc-class
----
+# Getting an Access Token
 
 Access to our services is controlled via tokens (Oauth 2.0). To get a token you must call our token end-point and supply your client key and client secret. Tokens remain valid for a limited time.
 
